--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,10 @@ body {
     justify-content: center;
 }
 .header {
-    font-size: 35px;
+    font-size: 50px;
     margin: 20px 0px;
+    color: black;
+    padding-bottom: 35px;
 }
 .container {
     width: 360px;
@@ -34,13 +36,10 @@ body {
 
 .answer {
     text-align: right;
-    padding-right: 30px;
+    padding: 20px 20px 15px 0px;
     white-space: nowrap;
     transition: font-size 0.2s ease;
     min-height: 60px;
-    overflow: hidden;
-    width: 100%;
-    box-sizing: border-box;
     font-size: 55px;
 }
 
@@ -95,3 +94,9 @@ button:active{
     border: 1px solid white;
 }
 
+.footer {
+    position: fixed;
+    bottom: 0;
+    color: black;
+    padding: 20px;
+}
